task controls almost done

--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -9,7 +9,9 @@
             <div class="col-md-5 col-md-offset-4 col-sm-5 col-sm-offset-3 col-xs-offset-1 col-xs-8">
               <div class=" btn-toolbar btn-group" style="margin-top:1px; padding: 5px;">
                 <%= bar_link_to 'Лента', tasks_path %>
+                <!-- TODO: friends
                 <%= bar_link_to 'Друзья', friends_path %>
+                -->
                 <%= bar_link_to 'Профиль', profile_path %>
               </div>
             </div>
