--- a/app/views/tasks/_share.html.erb
+++ b/app/views/tasks/_share.html.erb
@@ -1,12 +1,11 @@
-
-<!-- 
-<input class="form-control text-input" onfocus="this.select()" value="<%= task_url(@task.token) %>" readonly>
- -->
- <div class='share-buttons' data-description='<%= task.description %>' data-image='' data-url='<%= task_path(task.token) %>'>
-    <strong style="bottom: 10px; position: relative;">Поделиться: </strong>
+<div class='share-buttons' data-description='<%= task.description %>' data-image='' data-url='<%= task_path(task.token) %>'>
+  <strong>Поделиться: </strong>
+  <input type="text" class="form-control text-input" onfocus="$(this).select();" onclick="$(this).select();" value="<%= task_url(@task.token) %>" readonly>
+  <div class="form-group" style="margin-top: 10px">
     <a class="zocial vk icon" data-provider="vk"></a>
     <a class="zocial twitter icon" data-provider="twitter"></a>
     <a class="zocial facebook icon" data-provider="facebook"></a>
     <a class="zocial googleplus icon" data-provider="googleplus"></a>
     <a class="zocial email icon" data-provider="email"></a>
+  </div>
 </div>
