task controls done

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,16 +5,16 @@
 			<img src="<%= @current_user.picture_large_url %>" style="margin-top: 13px" class="big-avatar">
 		</div>
 		<div class=" col-lg-8 col-md-8 col-sm-8 col-xs-8">
-		
+
 			<div class="col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-2 col-sm-12 col-sm-offset-3 col-xs-12 col-xs-offset-5 ">
-				<h4 class="profil-name"> <%= @current_user.name %> <%= link_to 'Выйти', logout_path, :class => "btn light-btn" %> </h4> 
-				<p class="btext">Статус: (TODO)</p>
+				<h4 class="profil-name"> <%= @current_user.name %> <%= link_to 'Выйти', logout_path, :class => "btn light-btn" %> </h4>
+				<p class="btext">Статус: (скрыт)</p>
 				<div class="row-fluid">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 profil-razdelitel">
 					</div>
 				</div>
 				<p class= "btext">
-					Город: <span class="gtext">Ростов-на-Дону</span><br>
+					Город: <span class="gtext">(скрыт)</span><br>
 				Телефон: <span class="gtext">(скрыт)</span><br>
 				</p>
 				<div class="margin"> </div>
